tests/cases/invalid/records/input-record-field-attribute-bag/example.mld
/record @contact = {
  facts: [email: string { exact: true }]
}
